--- a/src/components/Card/CardSelect/styles.css
+++ b/src/components/Card/CardSelect/styles.css
@@ -35,6 +35,7 @@
 .containerTextSelect {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 .textSelect {
     color: #FFF;
@@ -56,23 +57,25 @@
     text-align: start;
 }
 
-@media (min-width:360px) {
+@media (min-width: 360px) and (max-width: 768px) {
     .containerCardSelect {
         flex-direction: column;
         height: auto;
         padding: 20px;
         gap: 1em;
+        border-radius: 20px;
+        width: 80%;
     }
+    
     .containerTextSelect {
         width: 100%;
         overflow: scroll;
+        justify-content: flex-start;
     }
     .textSelect {
         margin: 0px;
     }
-    .photoContainer {
-        overflow: auto;
-    }
+
     .photoContainer {
         overflow: hidden;
         width: 100%;
@@ -81,25 +84,56 @@
     }
     .titleSelect {
         text-align: start;
+        font-size: 1.5em;
     }
 }
-
-@media (min-width:992px) {
+@media (min-width: 769px) and (max-width: 992px) {
     .containerCardSelect {
-        flex-direction: row;
-        gap: 2em;
-        width: 70%;
+        flex-direction: column;
+        gap: 1em;
         height: 500px;
-        justify-content: space-evenly;
-        width: 90%;
+        justify-content: center;
+        width: 80%;
     }
     .photoContainer {
         height: auto;
+        border-radius: 10px;
+        width: 100%;
+    }
+    .photoContainer {
+        width: 100%;
     }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 993px) and (max-width: 1200px) {
+    .containerCardSelect {
+        flex-direction: row;
+        width: 80%;
+    }
+    .imgFoodSelect {
+        width: auto;
+    }
+    .photoContainer {
+        width: 100%;
+        border-radius: 15px;
+    }
     .containerTextSelect {
-        justify-content: center;
+        width: 100%;
+    }
+}
+@media (min-width: 1201px) {
+    .containerCardSelect {
+        flex-direction: row;
+        width: 80%;
+    }
+    .imgFoodSelect {
+        width: auto;
+    }
+    .photoContainer {
+        width: 100%;
+        border-radius: 15px;
+    }
+    .containerTextSelect {
+        width: 100%;
     }
 }
