--- a/src/components/Phone/styles.css
+++ b/src/components/Phone/styles.css
@@ -63,3 +63,11 @@
         margin-top: -50px;
     }
 }
+@media (min-width: 1201px)  {
+    .phoneimg {
+        width: 400px;
+    }
+    .containerPhone {
+        margin-top: -50px;
+    }
+} 
