--- a/src/screens/Turist/TuristSix/styles.css
+++ b/src/screens/Turist/TuristSix/styles.css
@@ -30,6 +30,7 @@
   overflow-x: auto;
   white-space: nowrap;
   margin: 40px;
+  gap: 1em;
 }
 
 
@@ -54,7 +55,7 @@
 }
 .containerFoodSix {
   width: 100%;
-  height: 700px;
+  height: auto;
   overflow: hidden;
   align-items: center;
   justify-content: center;
@@ -67,29 +68,28 @@
   align-items: center;
   justify-content: center;
   width: 70%;
-}
-/* .cardContainer > * {
-  flex: 1 0 auto;
-  margin-right: 20px; 
-} */
-.containerButtonSix > * {
-  margin: 5px;
+  margin: 30px 0px;
 }
 
-@media (min-width: 360px) and (max-width: 576px) {
+
+
+@media (min-width: 360px) and (max-width: 768px) {
   .containerTitleSix {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
   }
+  .containerSectionSixTu {
+    margin-top: 50px;
+  }
+  .containerButtonSix {
+    gap: 1em;
+    margin: 10px 0px 40px 0px;
+  }
   .titleTuristSix {
     width: 90%;
     font-size: 2em;
-  }
-  .containerFoodSix {
-    height: 500px;
-    padding: 0px;
   }
   .cardContainer {
     width: 90%;
@@ -105,35 +105,10 @@
   }
 }
 
-
-@media (min-width: 577px) and (max-width: 772px){
-  .cardContainer > * {
-    flex: 0;
-    margin-right: 0px;
-  }
+@media (min-width: 769px) and (max-width: 992px) {
   .cardContainer {
     display: flex;
     overflow-x: auto;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-  }
-  .titleTuristSix {
-    font-size: 3em;
-  }
-  .containerTitleSix {
-    width: 90%;
-  }
-}
-@media (min-width: 773px) and (max-width: 992px) {
-  .cardContainer > * {
-    flex: 0;
-    margin-right: 0px;
-  }
-  .cardContainer {
-    display: flex;
-    overflow-x: auto;
-    width: 70%;
     align-items: center;
     justify-content: center;
   }
@@ -144,24 +119,13 @@
   .containerTitleSix {
     width: 80%;
   }
+  
 }
-
 @media (min-width: 993px) and (max-width: 1200px) {
-  .titleTuristSix {
-    width: 80%;
-    font-size: 4em;
+  .containerFoodSix {
+    height: 750px;
   }
   .cardContainer {
-    width: 70%;
-  }
-  .containerButtonSix {
-    justify-content: center;
-  }
-}
-
-@media (min-width: 1201px){
-  .titleTuristSix {
-    font-size: 5em;
-    width: 50%;
+    width: 100%;
   }
 }
