--- a/src/screens/Turist/TuristSix/styles.css
+++ b/src/screens/Turist/TuristSix/styles.css
@@ -73,13 +73,23 @@
 
 
 
-@media (min-width: 360px) and (max-width: 768px) {
+@media (min-width: 360px) and (max-width: 576px) {
   .containerTitleSix {
-    width: 100%;
+    width: 90%;
     display: flex;
     align-items: center;
     justify-content: center;
   }
+}
+@media (min-width: 577px) and (max-width: 1200px) {
+  .containerTitleSix {
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+@media (min-width: 360px) and (max-width: 768px) {
   .containerSectionSixTu {
     margin-top: 50px;
   }
@@ -114,12 +124,7 @@
   }
   .titleTuristSix {
     font-size: 3em;
-    width: 50%;
   }
-  .containerTitleSix {
-    width: 80%;
-  }
-  
 }
 @media (min-width: 993px) and (max-width: 1200px) {
   .containerFoodSix {
@@ -127,5 +132,10 @@
   }
   .cardContainer {
     width: 100%;
+  }
+}
+@media (min-width: 1201px)  {
+  .containerTitleSix {
+    width: 70%;
   }
 }
