--- a/src/components/Switch/styles.css
+++ b/src/components/Switch/styles.css
@@ -6,6 +6,35 @@
     align-items: center;
     justify-content: center;
 }
+.progress {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh; 
+    width: 100vw; 
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255, 255, 255, 0.10);
+    background-blend-mode: soft-light, normal;
+    box-shadow: 0px -4px 2px 0px rgba(0, 0, 0, 0.05) inset;
+    backdrop-filter: blur(40px);
+}
+
+.iso {
+    width: auto;
+    height: auto;
+    animation: isoFloat 2s linear infinite;
+}
+@keyframes isoFloat {
+    0% {
+        transform: rotate(0deg) translateX(0px) rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg) translateX(0px) rotate(-100deg);
+    }
+}
 
 @media (min-width: 360px) and (max-width: 576px) {
     .switch {
