--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -34,6 +34,7 @@
         align-items: center;
         justify-content: space-between;
         width: 100%;
+        background: linear-gradient(360deg, rgba(17, 17, 17, 0.00) 15.94%, #11111187 66.12%);
     }
 }
 
