--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -20,7 +20,7 @@
     background-blend-mode: soft-light, normal;
     box-shadow: 0px -4px 2px 0px rgba(0, 0, 0, 0.05) inset;
     backdrop-filter: blur(20px);
-    width: 70%;
+    width: 60%;
     height: auto;
     padding: 100px;
 }
@@ -33,7 +33,7 @@
 .textCard {
     color: #FFF;
     font-family: "Poppins", sans-serif;
-    font-size: 1em;
+    font-size: 1.2em;
     font-weight: 500;
     line-height: 150%;
     width: 100%;
@@ -80,7 +80,7 @@
     width: 100%;
 }
 
-@media (min-width: 360px)  {
+/* @media (min-width: 360px)  {
     .card {
         flex-direction: column-reverse;
         align-items: center;
@@ -139,4 +139,4 @@
     .rayoImg {
         width: 250px;
     }
-}
+} */
