--- a/src/screens/Turist/TuristThree/styles.css
+++ b/src/screens/Turist/TuristThree/styles.css
@@ -60,7 +60,7 @@
     }
 }
 
-@media (min-width: 1201px) {
+@media (min-width: 1201px) and (max-width: 1440px) {
     .titleTuristThree {
         font-size: 5em;
         width: 50%;
@@ -70,6 +70,19 @@
     }
     .containerCardTurOne {
         width: 80%;
+    }
+    
+}
+@media (min-width: 1441px) {
+    .titleTuristThree {
+        font-size: 5em;
+        width: 50%;
+    }
+    .containerTurThree {
+        margin-top: 100px;
+    }
+    .containerCardTurOne {
+        width: 70%;
     }
     
 }
