--- a/src/screens/Turist/TuristTwo/styles.css
+++ b/src/screens/Turist/TuristTwo/styles.css
@@ -91,39 +91,16 @@
   }
 }
 
-@media (min-width: 1201px) {
-  .titleTuristTwo {
-    font-size: 6em;
-  }
-  .subtitleTuristTwo {
-    width: 70%;
-  }
-  .containerTurTwo {
-    height: 200px;
-  }
-}
-@media (min-width: 1201px) {
+
+@media (min-width: 1201px) and (max-width: 1440px) {
   .titleTuristTwo {
     font-size: 5em;
   }
-  .subtitleTuristTwo {
-    font-size: 1.5em;
-    width: 80%;
-  }
-  .containerTurTwo {
-    height: 250px;
-  }
 }
 
-@media (min-width: 1201px) {
+@media (min-width: 1441px)  {
   .titleTuristTwo {
     font-size: 6em;
-  }
-  .subtitleTuristTwo {
-    width: 70%;
-  }
-  .containerTurTwo {
-    height: 200px;
   }
 }
 
