--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -80,7 +80,7 @@
     width: 100%;
 }
 
-/* @media (min-width: 360px)  {
+@media (min-width: 360px) and (max-width: 576px)  {
     .card {
         flex-direction: column-reverse;
         align-items: center;
@@ -95,7 +95,7 @@
     }
     .textCard {
         font-family: "Poppins-Regular", sans-serif;
-        font-size: .8em;
+        font-size: .9em;
         font-weight: 400;
     }
     .rayoImg {
@@ -106,8 +106,7 @@
     }
     
 }
-
-@media (min-width: 576px) {
+@media (min-width: 577px) and (max-width: 768px) {
     .tituloCard {
         font-size: 4em;
         width: 70%;
@@ -119,9 +118,18 @@
         font-family: "Poppins-Regular", sans-serif;
         font-size: 1em;
     }
+    .containerCard {
+        width: 50%;
+        padding: 80px;
+    }
+    .card {
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
-@media (min-width: 920px) {
+@media (min-width: 769px) and (max-width: 992px) {
     .card {
         flex-direction: row;
     }
@@ -133,10 +141,41 @@
         font-size: 1em;
     }
     .tituloCard {
-        font-size: 7em;
+        font-size: 4em;
         width: 100%;
     }
     .rayoImg {
         width: 250px;
     }
-} */
+    .containerCard {
+        width: 80%;
+        padding: 40px;
+    }
+}
+@media (min-width: 993px) and (max-width: 1200px) {
+    .textCard {
+        font-size: 1em;
+    }
+    .containerCard {
+        width: 70%;
+        padding: 50px;
+    }
+    .tituloCard {
+        font-size: 5em;
+    }
+}
+@media (min-width: 1201px) and (max-width: 1440px) {
+    .textCard {
+        font-size: 1em;
+        font-family: "Poppins-Light", sans-serif;
+    }
+    .containerCard {
+        padding: 60px;
+    }
+    .card {
+        gap: 3em;
+    }
+    .tituloCard {
+        font-size: 6em;
+    }
+}
