--- a/src/screens/SectionTwo/styles.css
+++ b/src/screens/SectionTwo/styles.css
@@ -293,10 +293,72 @@
   }
   .animation {
     padding: 15px 15px;
+    font-size: .9em;
   }
   .rotated-items-container {
     width: 100%;
-    height: 500px;
+    height: 400px;
+  }
+
+  .animation-1 {
+    top: 5%;
+    left: 0%;
+  }
+  .animation-2 {
+    left: 70%;
+    top: 5%;
+  }
+  .animation-3 {
+    left: 0%;
+    top: 75%;
+  }
+  .animation-4 {
+    left: 85%;
+    top: 55%;
+  }
+  .animation-5 {
+    top: 30%;
+    left: 17%;
+  }
+  .animation-6 {
+    top: 25%;
+    left: 62%;
+  }
+  .animation-7 {
+    left: 5%;
+    top: 30%;
+  }
+  .animation-8 {
+    left: 80%;
+    top: 75%;
+  }
+  .animation-9 {
+    top: 35%;
+    left: 75%;
+  }
+  .animation-10 {
+    top: 35%;
+    left: 40%;
+  }
+  .animation-11 {
+    top: 75%;
+    left: 40%;
+  }
+  .animation-12 {
+    top: 55%;
+    left: 55%;
+  }
+  .animation-13 {
+    left: 1%;
+    top: 50%;
+  }
+  .animation-14 {
+    top: 55%;
+    left: 25%;
+  }
+  .animation-15 {
+    top: 5%;
+    left: 40%;
   }
 }
 @media (min-width: 993px) and (max-width: 1200px)  {
@@ -309,11 +371,72 @@
     padding: 0px;
   }
   .animation {
-    padding: 20px 20px;
+    padding: 15px 20px;
+    font-size: 1em;
   }
   .rotated-items-container {
-    width: 100%;
-    height: 500px;
+    width: 80%;
+    height: 350px;
+  }
+  .animation-1 {
+    top: 5%;
+    left: 0%;
+  }
+  .animation-2 {
+    left: 70%;
+    top: 5%;
+  }
+  .animation-3 {
+    left: 0%;
+    top: 75%;
+  }
+  .animation-4 {
+    left: 85%;
+    top: 55%;
+  }
+  .animation-5 {
+    top: 30%;
+    left: 17%;
+  }
+  .animation-6 {
+    top: 25%;
+    left: 62%;
+  }
+  .animation-7 {
+    left: 5%;
+    top: 30%;
+  }
+  .animation-8 {
+    left: 80%;
+    top: 75%;
+  }
+  .animation-9 {
+    top: 35%;
+    left: 75%;
+  }
+  .animation-10 {
+    top: 35%;
+    left: 40%;
+  }
+  .animation-11 {
+    top: 75%;
+    left: 40%;
+  }
+  .animation-12 {
+    top: 55%;
+    left: 55%;
+  }
+  .animation-13 {
+    left: 1%;
+    top: 50%;
+  }
+  .animation-14 {
+    top: 55%;
+    left: 25%;
+  }
+  .animation-15 {
+    top: 5%;
+    left: 40%;
   }
 }
 @media (min-width: 1201px) and (max-width: 1440px)  {
@@ -331,6 +454,80 @@
   .rotated-items-container {
     width: 80%;
     height: 350px;
+  }
+  .animation-1 {
+    top: 5%;
+    left: 10%;
+  }
+  .animation-2 {
+    left: 70%;
+    top: 5%;
+  }
+  .animation-3 {
+    left: 6%;
+    top: 75%;
+  }
+  .animation-4 {
+    left: 85%;
+    top: 55%;
+  }
+  .animation-5 {
+    top: 30%;
+    left: 25%;
+  }
+  .animation-6 {
+    top: 25%;
+    left: 62%;
+  }
+  .animation-7 {
+    left: 5%;
+    top: 30%;
+  }
+  .animation-8 {
+    left: 70%;
+    top: 75%;
+  }
+  .animation-9 {
+    top: 35%;
+    left: 75%;
+  }
+  .animation-10 {
+    top: 35%;
+    left: 45%;
+  }
+  .animation-11 {
+    top: 75%;
+    left: 40%;
+  }
+  .animation-12 {
+    top: 55%;
+    left: 55%;
+  }
+  .animation-13 {
+    left: 15%;
+    top: 45%;
+  }
+  .animation-14 {
+    top: 55%;
+    left: 30%;
+  }
+  .animation-15 {
+    top: 5%;
+    left: 40%;
+  }
+}
+
+@media (min-width: 1441px) {
+  .animation {
+    font-size: 1.3em;
+    border: 3px solid white;
+  }
+  .selected { 
+
+    border: 3px solid #62fee2;
+  }
+  .animation:hover {
+    border: 3px solid #62fee2;
   }
   .animation-1 {
     top: 5%;
