--- a/src/screens/SectionTwo/styles.css
+++ b/src/screens/SectionTwo/styles.css
@@ -216,33 +216,73 @@
     padding: 0px;
   }
   .rotated-items-container {
-    width: 100%;
-    height: 500px;
+    width: 90%;
+    height: 350px;
   }
   .animation {
-    position: absolute;
-    padding: 15px 15px;
-    width: auto;
-    background-color: #111;
-    background: transparent;
-    border-radius: 100px;
-    border: 2px solid white;
-    cursor: pointer;
-    transition: 300ms ease-in-out;
-    color: #fff;
-    text-align: center;
-    font-family: "Poppins-Regular", sans-serif;
-    font-size: .9em;
-    font-weight: 400;
+    padding: 10px;
+    font-size: .8em;
   }
-  .animation:hover {
-    color: #62fee2;
-    border: 2px solid #62fee2;
+
+  .animation-1 {
+    top: 5%;
+    left: 0%;
   }
-  
-  .selected { 
-    color: #62fee2; 
-    border: 2px solid #62fee2;
+  .animation-2 {
+    left: 5%;
+    top: 50%;
+  }
+  .animation-3 {
+    left: 0%;
+    top: 85%;
+  }
+  .animation-4 {
+    left: 70%;
+    top: 50%;
+  }
+  .animation-5 {
+    top: 20%;
+    left: 5%;
+  }
+  .animation-6 {
+    top: 25%;
+    left: 62%;
+  }
+  .animation-7 {
+    left: 30%;
+    top: 5%;
+  }
+  .animation-8 {
+    left: 60%;
+    top: 85%;
+  }
+  .animation-9 {
+    top: 35%;
+    left: 75%;
+  }
+  .animation-10 {
+    top: 5%;
+    left: 60%;
+  }
+  .animation-11 {
+    top: 65%;
+    left: 40%;
+  }
+  .animation-12 {
+    top: 20%;
+    left: 50%;
+  }
+  .animation-13 {
+    left: 1%;
+    top: 35%;
+  }
+  .animation-14 {
+    top: 70%;
+    left: 3%;
+  }
+  .animation-15 {
+    top: 32%;
+    left: 25%;
   }
 }
 @media (min-width: 577px) and (max-width: 768px) {
@@ -254,33 +294,73 @@
     padding: 0px;
   }
   .rotated-items-container {
-    width: 100%;
-    height: 500px;
+    width: 90%;
+    height: 350px;
   }
   .animation {
-    position: absolute;
-    padding: 20px 20px;
-    width: auto;
-    background-color: #111;
-    background: transparent;
-    border-radius: 100px;
-    border: 2px solid white;
-    cursor: pointer;
-    transition: 300ms ease-in-out;
-    color: #fff;
-    text-align: center;
-    font-family: "Poppins-Regular", sans-serif;
-    font-size: 1em;
-    font-weight: 400;
+    padding: 10px;
+    font-size: .9em;
   }
-  .animation:hover {
-    color: #62fee2;
-    border: 2px solid #62fee2;
+
+  .animation-1 {
+    top: 5%;
+    left: 0%;
   }
-  
-  .selected { 
-    color: #62fee2; 
-    border: 2px solid #62fee2;
+  .animation-2 {
+    left: 70%;
+    top: 5%;
+  }
+  .animation-3 {
+    left: 0%;
+    top: 60%;
+  }
+  .animation-4 {
+    left: 65%;
+    top: 44%;
+  }
+  .animation-5 {
+    top: 25%;
+    left: 15%;
+  }
+  .animation-6 {
+    top: 25%;
+    left: 62%;
+  }
+  .animation-7 {
+    left: 30%;
+    top: 5%;
+  }
+  .animation-8 {
+    left: 75%;
+    top: 60%;
+  }
+  .animation-9 {
+    top: 35%;
+    left: 75%;
+  }
+  .animation-10 {
+    top: 30%;
+    left: 40%;
+  }
+  .animation-11 {
+    top: 65%;
+    left: 40%;
+  }
+  .animation-12 {
+    top: 50%;
+    left: 30%;
+  }
+  .animation-13 {
+    left: 1%;
+    top: 20%;
+  }
+  .animation-14 {
+    top: 43%;
+    left: 5%;
+  }
+  .animation-15 {
+    top: 5%;
+    left: 40%;
   }
 }
 @media (min-width: 769px) and (max-width: 992px) {
@@ -296,7 +376,7 @@
     font-size: .9em;
   }
   .rotated-items-container {
-    width: 100%;
+    width: 90%;
     height: 400px;
   }
 
@@ -375,7 +455,7 @@
     font-size: 1em;
   }
   .rotated-items-container {
-    width: 80%;
+    width: 90%;
     height: 350px;
   }
   .animation-1 {
